--- a/style.css
+++ b/style.css
@@ -12,5 +12,36 @@
 :root{
     --background: rgb(24, 24, 24);
     --second-background: rgb(21,21,21);
-    
+
 }
+
+body{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding: 2rem 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(15, 15, 15, 0.8);
+    backdrop-filter: blur(10px);
+    z-index: 1000;
+}
+
+ul{
+    display: flex;
+    align-items: center;
+    gap: 3em;
+
+}
+
+nav ul a{
+    color: white;
+    opacity: 0.7;
+    transition: 0.2s ease-in-out;
+}
+
+nav ul a:hover{
+    opacity: 1;
+}
+
