--- a/style.css
+++ b/style.css
@@ -235,14 +235,41 @@ section{
 
 .about-box h2{
     font-size: 2.5em;
+}#projects{
+    background-color: var(--background);
 }
 
+.header{
+    text-align: center;
+    font-size: 5em;
+    margin: 0.5em 0;
 
+}
 
+.projects-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,min-max(250px,1fr));
+    gap: 2em;
+}
 
+.box{
+    border: 3px solid rgb(49, 49, 49);
+    border-radius: 0.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    object-fit: cover;
+    padding: 3em;
+    grid-area: 2em;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
 
-
-
+}
+.box:hover{
+    border: ;
+}
 
 
 
